--- a/main.css
+++ b/main.css
@@ -1,5 +1,116 @@
-.wrapper {
-  width:400px;
-  flex-direction: row;
+.container {
+  width:max-content;
+  background: white;
+  margin: auto;
+
+} 
+
+.display {
+  background-color: black;
+  color: white;
+  width: 400px;
+  height: 50px;
+  font-size: 30px;
   display: flex;
+  justify-content: flex-end;
+  font-family: monospace;
+}
+
+.buttons{
+  max-width: 400px;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+button{
+  flex-grow: 1;
+  flex-basis:25%
+}
+
+#clear {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#backspace {
+  background-color: #d8d9db;
+  color: black;
+  display: inline-block;
+  padding: 1px 5px;
+}
+
+#divide {
+  background-color: #FF9500;
+  color: white;
+}
+
+#seven {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#eight {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#nine {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#multiply {
+  background-color: #FF9500;
+  color: white;
+}
+
+#four {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#five {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#six {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#subtract {
+  background-color: #FF9500;
+  color: white;
+}
+
+#one {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#two {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#three {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#plus {
+  background-color: #FF9500;
+  color: white;
+}
+
+#zero {
+  background-color: #d8d9db;
+  color: black;
+}
+
+#equals {
+  background-color: #FF9500;
+  color: white;
 }
