--- a/main.css
+++ b/main.css
@@ -2,46 +2,53 @@
   width:max-content;
   background: white;
   margin: auto;
+  height: 700px;
 
 } 
 
 .display {
   background-color: black;
   color: white;
-  width: 400px;
-  height: 50px;
-  font-size: 30px;
+  max-width: 450px;
+  height: 100px;
+  font-size: 50px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   font-family: monospace;
 }
 
 .buttons{
-  max-width: 400px;
+  max-width: 450px;
   display: flex;
   flex-wrap: wrap;
-
+  font-family: monospace;
+  font-size: 50px;
 }
 
 button{
   flex-grow: 1;
-  flex-basis:25%
+  flex-direction: row;
+  flex-basis: 25%;
+  height: 115px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 #clear {
   background-color: #d8d9db;
   color: black;
+  flex-basis: 50%;
 }
 
 #backspace {
   background-color: #d8d9db;
   color: black;
-  display: inline-block;
-  padding: 1px 5px;
+  font-size: 75px;
 }
 
 #divide {
-  background-color: #FF9500;
+  background-color: #df974c;
   color: white;
 }
 
@@ -61,7 +68,7 @@ button{
 }
 
 #multiply {
-  background-color: #FF9500;
+  background-color: #df974c;
   color: white;
 }
 
@@ -81,7 +88,7 @@ button{
 }
 
 #subtract {
-  background-color: #FF9500;
+  background-color: #df974c;
   color: white;
 }
 
@@ -101,16 +108,17 @@ button{
 }
 
 #plus {
-  background-color: #FF9500;
+  background-color: #df974c;
   color: white;
 }
 
 #zero {
   background-color: #d8d9db;
   color: black;
+  flex-basis: 75%;
 }
 
 #equals {
-  background-color: #FF9500;
+  background-color: #df974c;
   color: white;
 }
